--- a/demo.html
+++ b/demo.html
@@ -18,121 +18,8 @@
         #prev { left: 20px;}
         #next { right: 20px;}
     </style>
-    <script type="text/javascript">
 
-        window.onload = function () {
-            var container = document.getElementById('container');
-            var list = document.getElementById('list');
-            var buttons = document.getElementById('buttons').getElementsByTagName('span');
-            var prev = document.getElementById('prev');
-            var next = document.getElementById('next');
-            var index = 1;
-            var len = 5;
-            var animated = false;
-            var interval = 3000;
-            var timer;
-
-
-            function animate (offset) {
-                if (offset == 0) {
-                    return;
-                }
-                animated = true;
-                var time = 300;
-                var inteval = 10;
-                var speed = offset/(time/inteval);
-                var left = parseInt(list.style.left) + offset;
-
-                var go = function (){
-                    if ( (speed > 0 && parseInt(list.style.left) < left) || (speed < 0 && parseInt(list.style.left) > left)) {
-                        list.style.left = parseInt(list.style.left) + speed + 'px';
-                        setTimeout(go, inteval);
-                    }
-                    else {
-                        list.style.left = left + 'px';
-                        if(left>-200){
-                            list.style.left = -600 * len + 'px';
-                        }
-                        if(left<(-600 * len)) {
-                            list.style.left = '-600px';
-                        }
-                        animated = false;
-                    }
-                }
-                go();
-            }
-
-            function showButton() {
-                for (var i = 0; i < buttons.length ; i++) {
-                    if( buttons[i].className == 'on'){
-                        buttons[i].className = '';
-                        break;
-                    }
-                }
-                buttons[index - 1].className = 'on';
-            }
-
-            function play() {
-                timer = setTimeout(function () {
-                    next.onclick();
-                    play();
-                }, interval);
-            }
-            function stop() {
-                clearTimeout(timer);
-            }
-
-            next.onclick = function () {
-                if (animated) {
-                    return;
-                }
-                if (index == 5) {
-                    index = 1;
-                }
-                else {
-                    index += 1;
-                }
-                animate(-600);
-                showButton();
-            }
-            prev.onclick = function () {
-                if (animated) {
-                    return;
-                }
-                if (index == 1) {
-                    index = 5;
-                }
-                else {
-                    index -= 1;
-                }
-                animate(600);
-                showButton();
-            }
-
-            for (var i = 0; i < buttons.length; i++) {
-                buttons[i].onclick = function () {
-                    if (animated) {
-                        return;
-                    }
-                    if(this.className == 'on') {
-                        return;
-                    }
-                    var myIndex = parseInt(this.getAttribute('index'));
-                    var offset = -600 * (myIndex - index);
-
-                    animate(offset);
-                    index = myIndex;
-                    showButton();
-                }
-            }
-
-            container.onmouseover = stop;
-            container.onmouseout = play;
-
-            play();
-
-        }
-    </script>
+    <script type="text/javascript" src="js/demo.js"></script>
 </head>
 <body>
 
@@ -147,11 +34,11 @@
         <img src="img/1.jpg" alt="5"/>
     </div>
     <div id="buttons">
-        <span index="1" class="on"></span>
+        <span index="0" class="on"></span>
+        <span index="1"></span>
         <span index="2"></span>
         <span index="3"></span>
         <span index="4"></span>
-        <span index="5"></span>
     </div>
     <a href="javascript:;" id="prev" class="arrow">&lt;</a>
     <a href="javascript:;" id="next" class="arrow">&gt;</a>
